--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="js/navigationManager.js"></script>
 </head>
 <body>
-    <div class="outer-container" id="indexWorkspace">
+    <div  id="indexWorkspace">
         <h2>
             ProAg Policy Search</h2>
         <hr />
